# Multi-task-electronic

./: EGNN_hydrocarbon_model.pt  README.md  demo.py  deploy.py  pyproject.toml  test.py  train_parallel.py
data/: C10H10_data.json  C2H2_data.json  C2H2_obs_mat.json  C2H4_data.json  C2H4_obs_mat.json  C2H6_data.json  C2H6_obs_mat.json  C3H4_data.json  C3H4_obs_mat.json  C3H6_data.json  C3H6_obs_mat.json  C3H8_data.json  C3H8_obs_mat.json  C4H10_data.json  C4H10_obs_mat.json  C4H6_data.json  C4H6_obs_mat.json  C4H8_data.json  C4H8_obs_mat.json  C5H10_data.json  C5H10_obs_mat.json  C5H12_data.json  C5H12_obs_mat.json  C5H8_data.json  C5H8_obs_mat.json  C6H12_data.json  C6H14_data.json  C6H6_data.json  C6H6_obs_mat.json  C6H8_data.json  C6H8_obs_mat.json  C7H10_data.json  C7H14_data.json  C7H8_data.json  C7H8_obs_mat.json  C8H14_data.json  C8H8_data.json  CH4_data.json  CH4_obs_mat.json  aromatic_19_data.json  (+5 more)
demo/: demo_inference.py  demo_parallel.py  demo_train.py
interface/orca/: read.py
interface/orca/orca_folder/: run.densities  run.gbw  run.inp  run_property.txt  submit.sh
mlelect/: apply.py  deploy.py  integral.py  orbitals.json  predict_func.py  predictor.py
pkgs/: apply.py  dataframe.py  deploy.py  loss_fns.py  train.py
script/: MD_sampler.py  b3lyp_read.py  basis  generate.py  generate_ccsdt.py  generate_obs_mat.py  orbitals.json  orbitals.py  organize.py  plot_training_curve.py  read.py  read_eom.py  read_obs.py  test_S.py  time.py
src/mtelect/: __init__.py  model.py  read_orca  sample_minibatch.py  tomat.py  train.py  train_func.py
